<resources>
    <string name="app_name">Attendance Management</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

        <string name="localhost">http://192.168.43.186/AttendanceManagement</string>
<!--    <string name="localhost">http://my-attendance-management.000webhostapp.com</string>-->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_faculty">FacultyActivity</string>
    <string name="title_activity_student">StudentActivity</string>


</resources>
