<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:scrollbars="vertical"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/editTextSignUpUserId"
                    style="@style/modifiedEditText"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="ID / Roll No."/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/editTextSignUpUserName"
                    style="@style/modifiedEditText"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="Name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/editTextSignUpUserMobile"
                    style="@style/modifiedEditText"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="Mobile Number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/editTextSignUpUserEmail"
                    style="@style/modifiedEditText"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/login_email_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/editTextSignUpUserPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signUpUserType"
                android:layout_gravity="center"
                android:checked="true"
                android:layout_margin="5dp"
                android:textColor="#000000"
                app:showText="true"
                app:track="@drawable/track"
                android:textOn= "Faculty"
                android:textOff="Student"
                app:thumbTextPadding="10dp"
                android:thumb="@drawable/thumb" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarRegister"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:background="@drawable/login_button_bk"/>

        <Button
            android:id="@+id/btn_Register"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Register" />


        <TextView
            android:id="@+id/textViewLogin"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:gravity="center_horizontal" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
