<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">



    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="Login"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/editTextEmail"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userType"
            android:layout_gravity="center"
            android:checked="true"
            android:layout_margin="5dp"
            android:textColor="#000000"
            app:showText="true"
            app:track="@drawable/track"
            android:textOn= "Faculty"
            android:textOff="Student"
            app:thumbTextPadding="10dp"
            android:thumb="@drawable/thumb" />

        <TextView
            android:id="@+id/textViewForgetPassword"
            style="@style/viewParent"
            android:text="Forgot Password?"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"/>


        <ProgressBar
            android:id="@+id/progressBarLogin"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@drawable/login_button_bk"/>

        <Button
            android:id="@+id/btn_Login"
            style="@style/loginButton"
            android:text="Login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <TextView
            style="@style/parent"
            android:id="@+id/textViewSignUp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/login_signup_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>